--- a/login.html
+++ b/login.html
@@ -45,9 +45,12 @@
       text-decoration: none;
       font-weight: 500;
       transition: color 0.3s ease;
+      display: block;
+      padding: 8px;
+      border-radius: 5px;
     }
     .sidebar a:hover {
-      color: #ffafbd;
+      background-color: rgba(255, 255, 255, 0.1);
     }
     .content {
       flex: 1;
@@ -77,6 +80,10 @@
       from { opacity: 0; }
       to { opacity: 1; }
     }
+    .active {
+      background-color: rgba(255, 255, 255, 0.2);
+      font-weight: 700;
+    }
   </style>
 </head>
 <body>
@@ -84,12 +91,12 @@
     <nav class="sidebar">
       <h2>Welcome, Student!</h2>
       <ul>
-        <li><a href="#profile">Profile</a></li>
-        <li><a href="#courses">My Courses</a></li>
-        <li><a href="#assignments">Assignments</a></li>
-        <li><a href="#grades">Grades</a></li>
-        <li><a href="#settings">Settings</a></li>
-        <li><a href="#logout" onclick="logout()">Logout</a></li>
+        <li><a href="profile.html" class="active">Profile</a></li>
+        <li><a href="courses.html">My Courses</a></li>
+        <li><a href="assignments.html">Assignments</a></li>
+        <li><a href="grades.html">Grades</a></li>
+        <li><a href="settings.html">Settings</a></li>
+        <li><a href="index.html" onclick="logout()">Logout</a></li>
       </ul>
     </nav>
     <main class="content">
@@ -134,8 +141,22 @@
 
     function logout() {
       alert('Logging out...');
-      window.location.href = 'index.html';
+      // You can add Supabase logout functionality here if needed
     }
+
+    // Highlight current page in navigation
+    document.addEventListener('DOMContentLoaded', function() {
+      const currentPage = window.location.pathname.split('/').pop() || 'profile.html';
+      const navLinks = document.querySelectorAll('.sidebar a');
+      
+      navLinks.forEach(link => {
+        if (link.getAttribute('href') === currentPage) {
+          link.classList.add('active');
+        } else {
+          link.classList.remove('active');
+        }
+      });
+    });
   </script>
 </body>
 </html>
