--- a/login.html
+++ b/login.html
@@ -96,6 +96,7 @@
         <li><a href="assignments.html">Assignments</a></li>
         <li><a href="grades.html">Grades</a></li>
         <li><a href="settings.html">Settings</a></li>
+        <li><a href="c.html">chatroom</a></li>
         <li><a href="index.html" onclick="logout()">Logout</a></li>
       </ul>
     </nav>
