--- a/profile.html
+++ b/profile.html
@@ -27,7 +27,7 @@
               <h3>Personal Information</h3>
               <div class="detail-item">
                 <span class="detail-label">Student ID:</span>
-                <span class="detail-value">STU2023001</span>
+                <span class="detail-value">23bce20114</span>
               </div>
               <div class="detail-item">
                 <span class="detail-label">Department:</span>
@@ -35,7 +35,7 @@
               </div>
               <div class="detail-item">
                 <span class="detail-label">Semester:</span>
-                <span class="detail-value">5th</span>
+                <span class="detail-value">4th</span>
               </div>
             </div>
             
@@ -43,11 +43,11 @@
               <h3>Contact Information</h3>
               <div class="detail-item">
                 <span class="detail-label">Phone:</span>
-                <span class="detail-value">+1 (555) 123-4567</span>
+                <span class="detail-value">+91 9494152378</span>
               </div>
               <div class="detail-item">
                 <span class="detail-label">Address:</span>
-                <span class="detail-value">123 University Ave, Campus Town</span>
+                <span class="detail-value">vitap university,vijayawada</span>
               </div>
             </div>
           </div>
