--- a/courses.html
+++ b/courses.html
@@ -19,8 +19,8 @@
             <label>Semester:</label>
             <select>
               <option>All Semesters</option>
-              <option>Fall 2023</option>
-              <option>Spring 2023</option>
+              <option>Fall 2024</option>
+              <option>Win 2024</option>
             </select>
           </div>
           <div class="filter-group">
@@ -36,7 +36,7 @@
         <div class="course-list">
           <div class="course-card">
             <div class="course-header" style="background: #4e73df;">
-              <h3>CS 301 - Data Structures</h3>
+              <h3>CSE301 - Data Structures</h3>
               <span class="course-code">COMPSCI-301</span>
             </div>
             <div class="course-body">
@@ -52,7 +52,7 @@
           
           <div class="course-card">
             <div class="course-header" style="background: #1cc88a;">
-              <h3>MATH 201 - Calculus II</h3>
+              <h3>MAT2007 - Calculus II</h3>
               <span class="course-code">MATH-201</span>
             </div>
             <div class="course-body">
