--- a/assignments.html
+++ b/assignments.html
@@ -40,7 +40,7 @@
           <div class="assignment-card">
             <div class="assignment-header">
               <h3>Chapter 5 Exercises</h3>
-              <span class="due-date"><i class="fas fa-clock"></i> Due: Nov 2, 2023</span>
+              <span class="due-date"><i class="SRS Document"></i> Due: Nov 2, 2023</span>
             </div>
             <div class="assignment-body">
               <p><strong>Course:</strong> MATH 201 - Calculus II</p>
