--- a/login.html
+++ b/login.html
@@ -136,8 +136,8 @@
   </div>
 
   <script>
-    NEXT_PUBLIC_SUPABASE_URL=https://ifztgewdgcfxppsocsco.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImlmenRnZXdkZ2NmeHBwc29jc2NvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDA3OTY0MTAsImV4cCI6MjA1NjM3MjQxMH0.I8zh1pagpB7ZnXiVWvYQ0rUBqqnWtqBb4GaN4Bubw0w
+    const supabaseUrl="https://ifztgewdgcfxppsocsco.supabase.co";
+const supabaseKey='eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImlmenRnZXdkZ2NmeHBwc29jc2NvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDA3OTY0MTAsImV4cCI6MjA1NjM3MjQxMH0.I8zh1pagpB7ZnXiVWvYQ0rUBqqnWtqBb4GaN4Bubw0w';
     const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
     function logout() {
