--- a/login.html
+++ b/login.html
@@ -136,7 +136,7 @@
   </div>
 
   <script>
-    const supabaseUrl="https://ifztgewdgcfxppsocsco.supabase.co";
+    const supabaseUrl='https://ifztgewdgcfxppsocsco.supabase.co';
 const supabaseKey='eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImlmenRnZXdkZ2NmeHBwc29jc2NvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDA3OTY0MTAsImV4cCI6MjA1NjM3MjQxMH0.I8zh1pagpB7ZnXiVWvYQ0rUBqqnWtqBb4GaN4Bubw0w';
     const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
