--- a/index1.html
+++ b/index1.html
@@ -113,8 +113,8 @@
 
   <script>
     // Supabase configuration
-    const supabaseUrl = 'https://your-project.supabase.co';
-    const supabaseKey = 'your-anon-key';
+    const supabaseUrl = 'https://ifztgewdgcfxppsocsco.supabase.co';
+    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImlmenRnZXdkZ2NmeHBwc29jc2NvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDA3OTY0MTAsImV4cCI6MjA1NjM3MjQxMH0.I8zh1pagpB7ZnXiVWvYQ0rUBqqnWtqBb4GaN4Bubw0w';
     const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
     // Login function
