--- a/faculty-register.html
+++ b/faculty-register.html
@@ -183,12 +183,12 @@
       </div>
       
       <div class="form-actions">
-        <button type="button" class="btn btn-outline" onclick="window.location.href='index.html'">Back to Login</button>
+        <button type="button" class="btn btn-outline" onclick="window.location.href='index1.html'">Back to Login</button>
         <button type="submit" class="btn btn-primary">Register</button>
       </div>
       
       <div class="login-link">
-        Already have an account? <a href="index.html">Login here</a>
+        Already have an account? <a href="index1.html">Login here</a>
       </div>
     </form>
   </div>
