--- a/faculty-courses.html
+++ b/faculty-courses.html
@@ -86,3 +86,87 @@
           </tbody>
         </table>
         
+        <!-- Pagination -->
+        <div class="pagination">
+          <button class="btn btn-outline" disabled>
+            <i class="fas fa-chevron-left"></i> Previous
+          </button>
+          <div class="page-numbers">
+            <span class="active">1</span>
+            <span>2</span>
+            <span>3</span>
+            <span>...</span>
+            <span>5</span>
+          </div>
+          <button class="btn btn-outline">
+            Next <i class="fas fa-chevron-right"></i>
+          </button>
+          <div class="page-info">
+            Showing 1-5 of 23 courses
+          </div>
+        </div>
+      </div>
+      
+      <!-- Create Course Modal -->
+      <div class="modal" id="createCourseModal">
+        <div class="modal-dialog">
+          <div class="modal-header">
+            <h3>Create New Course</h3>
+            <button class="close-modal">&times;</button>
+          </div>
+          <div class="modal-body">
+            <form id="courseForm">
+              <div class="form-group">
+                <label for="courseCode">Course Code*</label>
+                <input type="text" id="courseCode" placeholder="e.g., CS-301" required>
+              </div>
+              <div class="form-group">
+                <label for="courseName">Course Name*</label>
+                <input type="text" id="courseName" placeholder="e.g., Data Structures" required>
+              </div>
+              <div class="form-row">
+                <div class="form-group">
+                  <label for="courseDepartment">Department*</label>
+                  <select id="courseDepartment" required>
+                    <option value="">Select Department</option>
+                    <option value="CS">Computer Science</option>
+                    <option value="MATH">Mathematics</option>
+                    <option value="PHYS">Physics</option>
+                  </select>
+                </div>
+                <div class="form-group">
+                  <label for="courseCredits">Credits*</label>
+                  <select id="courseCredits" required>
+                    <option value="3">3 Credits</option>
+                    <option value="4">4 Credits</option>
+                  </select>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="courseSemester">Semester*</label>
+                <select id="courseSemester" required>
+                  <option value="spring">Spring 2023</option>
+                  <option value="summer">Summer 2023</option>
+                  <option value="fall">Fall 2023</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <label for="courseDescription">Description</label>
+                <textarea id="courseDescription" rows="4" placeholder="Course description..."></textarea>
+              </div>
+              <div class="form-actions">
+                <button type="button" class="btn btn-outline close-modal">Cancel</button>
+                <button type="submit" class="btn btn-primary">Create Course</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </main>
+  </div>
+
+  <!-- Scripts -->
+  <script src="js/auth.js"></script>
+  <script src="js/faculty-courses.js"></script>
+</body>
+</html>
