--- a/login.html
+++ b/login.html
@@ -91,7 +91,7 @@
     <nav class="sidebar">
       <h2>Welcome, Student!</h2>
       <ul>
-        <li><a href="./profile.html" class="active">Profile</a></li>
+        <li><a href="profile.html" class="active">Profile</a></li>
         <li><a href="courses.html">My Courses</a></li>
         <li><a href="assignments.html">Assignments</a></li>
         <li><a href="grades.html">Grades</a></li>
