--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         if (error) throw error;
         
         alert('Student login successful!');
-        window.location.href = 'profile.html';
+        window.location.href = 'login.html';
       } catch (error) {
         alert('Login failed: ' + error.message);
       }
